basic-parallel-filechunk/spring-commandline/src/test/resources/copybooks/bad/garbage-token.cbl
01  TEST-REC.
05  FIELD1 PIC X(10).
THIS IS NOT COBOL.
